Setup authentication and endpoints for users and reviews

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - ./:/home/node/app/
     command: npm run start
+    depends_on:
+      - db
 
   db:
     image: postgres
