--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "bcrypt": "^5.1.1",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
+      "date-fns": "^3.6.0",
       "pg": "^8.12.0",
       "reflect-metadata": "^0.2.0",
       "rxjs": "^7.8.1",
@@ -60,8 +61,8 @@
       "ts-loader": "^9.4.3",
       "ts-node": "^10.9.1",
       "tsconfig-paths": "^4.2.0",
-      "typescript": "^5.1.3",
-      "typeorm-cli": "^1.0.7"
+      "typeorm-cli": "^1.0.7",
+      "typescript": "^5.1.3"
    },
    "jest": {
       "moduleFileExtensions": [
