--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "@nestjs/testing": "^10.0.0",
       "@types/bcrypt": "^5.0.2",
       "@types/express": "^4.17.17",
+      "@types/faker": "^6.6.9",
       "@types/jest": "^29.5.2",
       "@types/node": "^20.3.1",
       "@types/supertest": "^6.0.0",
@@ -53,6 +54,7 @@
       "eslint": "^8.42.0",
       "eslint-config-prettier": "^9.0.0",
       "eslint-plugin-prettier": "^5.0.0",
+      "faker": "^6.6.6",
       "jest": "^29.5.0",
       "prettier": "^3.0.0",
       "source-map-support": "^0.5.21",
