--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     command: npm run start
     depends_on:
       - db
+    environment:
+      - DB_HOST=db
 
   db:
     image: postgres
