--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
       "start": "nest start",
-      "start:dev": "nest start --watch",
       "start:debug": "nest start --debug --watch",
       "start:prod": "node dist/main",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -29,7 +28,7 @@
       "@nestjs/swagger": "^7.3.1",
       "@nestjs/terminus": "^10.2.3",
       "@nestjs/typeorm": "^10.0.2",
-      "bcrypt": "^5.1.1",
+      "bcryptjs": "^2.4.3",
       "class-transformer": "^0.5.1",
       "class-validator": "^0.14.1",
       "date-fns": "^3.6.0",
@@ -40,12 +39,12 @@
       "typeorm-extension": "^3.5.1"
    },
    "devDependencies": {
+      "@faker-js/faker": "^8.4.1",
       "@nestjs/cli": "^10.0.0",
       "@nestjs/schematics": "^10.0.0",
       "@nestjs/testing": "^10.0.0",
-      "@types/bcrypt": "^5.0.2",
+      "@types/bcryptjs": "^2.4.6",
       "@types/express": "^4.17.17",
-      "@types/faker": "^6.6.9",
       "@types/jest": "^29.5.2",
       "@types/node": "^20.3.1",
       "@types/supertest": "^6.0.0",
@@ -54,7 +53,6 @@
       "eslint": "^8.42.0",
       "eslint-config-prettier": "^9.0.0",
       "eslint-plugin-prettier": "^5.0.0",
-      "faker": "^6.6.6",
       "jest": "^29.5.0",
       "prettier": "^3.0.0",
       "source-map-support": "^0.5.21",
